Name: Tsuru
Version: 0.1
Description: Sample code for Tsuru
Author: Emil Guseynov
Maintainer: emilchess@yandex.ru
Category: Network
Build-Type: Simple
Cabal-Version: >= 1.16


Executable Solution
  Main-is: Solution.hs
  Build-depends:
      attoparsec >= 0.10.2.0
    , base >= 4.0 && < 5.0
    , bytestring >= 0.9.1 && < 0.9.3
    , containers >= 0.4 && < 0.6
    , pcap >= 0.4.5 && < 0.5
